Fixed the last commit, adding Arial as a fallback for IOS safari not working. Introduced adaptive line-height for smaller screens. Made quotes, as seen on homepage, use width: auto  on small screens.

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-html{
-    font-size: 1em;
-    line-height: normal;
-}
-
 body {
     margin: 1em;
     padding: 1em;
@@ -11,13 +6,18 @@ body {
 }
 
 @media only screen and (min-width: 0px) {
+    html{
+        font-size: 16px;
+        line-height: 1.3em;
+    }
+
     #article{
         margin-top: 1em;
         border: 2px solid rgb(140, 194, 227);
         border-radius: 8px;
         width: auto;
 
-        font-family: Arial Narrow;
+        font-family: Arial Narrow, Arial;
     }
 
     #article img{
@@ -26,6 +26,11 @@ body {
 }
 
 @media only screen and (min-width: 480px) {
+    html{
+        font-size: 18px;
+        line-height: 1.3;
+    }
+
     #article{
         margin-top: 1em;
         border: 2px solid rgb(140, 194, 227);
